# file_saver

./: .dockerignore  Makefile  README.md  docker-compose.yaml  docker-swarm.yaml  pyproject.toml  stack.yaml
alembic/: env.py
alembic/versions/: 14cbab276cd6_.py
resources/commands/: migrate.py
resources/conf/: nginx.conf
resources/docker/: app.dockerfile  app.local.dockerfile
src/: create_fastapi_app.py  loader.py  main.py
src/api/: dependency_injection.py  routers.py
src/clients/: s3_client.py
src/config/: settings.py
src/db/: models.py  setup.py  unit_of_work.py
src/db/repositories/: file_repository.py  sqlalchemy_repository.py
src/exceptions/: app_exception.py  internal_error.py  not_found_error.py  validation_error.py
src/services/: file_service.py
