[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
app = [
    "aiobotocore>=3.1.2",
    "alembic>=1.18.4",
    "alembic-postgresql-enum>=1.9.0",
    "fastapi>=0.129.0",
    "gunicorn>=25.1.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
linters = [
    "pyright>=1.1.408",
    "ruff>=0.15.1",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

include = ["src"]
exclude = ["**/__pycache__"]

reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
